--- a/index.html
+++ b/index.html
@@ -4,7 +4,28 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Admin Dash</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div id="main-grid">
+        <header>Evil Space Corp</header>
+        <div id="dash-nav">
+            <img id="logo" src="./img/favicon.ico" alt="logo">
+                <nav>
+                    <ul>
+                        <li><a href="">Sample text</a></li>
+                        <li><a href="">Sample text</a></li>
+                        <li><a href="">Sample text</a></li>
+                        <li><a href="">Sample text</a></li>
+                        <li><a href="">Sample text</a></li>
+                    </ul>
+                </nav>
+            </div>
+            <div id="dash-main">
+         
+            </div>
+            <footer>Footer</footer>
+        </div>
+    </div>
 </body>
 </html>
