Add and update dashboard content

--- a/index.html
+++ b/index.html
@@ -8,21 +8,52 @@
 </head>
 <body>
     <div id="main-grid">
-        <header>Evil Space Corp</header>
+        <header><h1>Evil Space Corp Dash</h1></header>
         <div id="dash-nav">
-            <img id="logo" src="./img/favicon.ico" alt="logo">
+            <img id="logo" src="./img/logo.png" alt="logo">
                 <nav>
                     <ul>
-                        <li><a href="">Sample text</a></li>
-                        <li><a href="">Sample text</a></li>
-                        <li><a href="">Sample text</a></li>
-                        <li><a href="">Sample text</a></li>
-                        <li><a href="">Sample text</a></li>
+                        <li><div class="current-page nav-link">Dashboard</div></li>
+                        <li><div class="nav-link"><a href="">Statistics</a></div></li>
+                        <li><div class="nav-link"><a href="">Inventory</a></div></li>
+                        <li><div class="nav-link"><a href="">Allies</a></div></li>
+                        <li><div class="nav-link"><a href="">Sample text</a></div></li>
                     </ul>
                 </nav>
             </div>
             <div id="dash-main">
-         
+                <div class="widget">
+                    <h2>Example Widget</h2>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eveniet provident repellat sunt cupiditate sit reprehenderit quam dolores ipsam omnis incidunt, mollitia esse, rerum atque adipisci expedita, illum laudantium officia distinctio.</p>
+                </div>
+                <div class="widget">
+                    <h2>Example Widget</h2>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eveniet provident repellat sunt cupiditate sit reprehenderit quam dolores ipsam omnis incidunt, mollitia esse, rerum atque adipisci expedita, illum laudantium officia distinctio.</p>
+                </div>
+                <div class="widget">
+                    <h2>Example Widget</h2>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eveniet provident repellat sunt cupiditate sit reprehenderit quam dolores ipsam omnis incidunt, mollitia esse, rerum atque adipisci expedita, illum laudantium officia distinctio.</p>
+                </div>
+                <div class="widget">
+                    <h2>Example Widget</h2>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eveniet provident repellat sunt cupiditate sit reprehenderit quam dolores ipsam omnis incidunt, mollitia esse, rerum atque adipisci expedita, illum laudantium officia distinctio.</p>
+                </div>
+                <div class="widget">
+                    <h2>Example Widget</h2>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eveniet provident repellat sunt cupiditate sit reprehenderit quam dolores ipsam omnis incidunt, mollitia esse, rerum atque adipisci expedita, illum laudantium officia distinctio.</p>
+                </div>
+                <div class="widget">
+                    <h2>Example Widget</h2>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eveniet provident repellat sunt cupiditate sit reprehenderit quam dolores ipsam omnis incidunt, mollitia esse, rerum atque adipisci expedita, illum laudantium officia distinctio.</p>
+                </div>
+                <div class="widget">
+                    <h2>Example Widget</h2>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eveniet provident repellat sunt cupiditate sit reprehenderit quam dolores ipsam omnis incidunt, mollitia esse, rerum atque adipisci expedita, illum laudantium officia distinctio.</p>
+                </div>
+                <div class="widget">
+                    <h2>Example Widget</h2>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eveniet provident repellat sunt cupiditate sit reprehenderit quam dolores ipsam omnis incidunt, mollitia esse, rerum atque adipisci expedita, illum laudantium officia distinctio.</p>
+                </div>
             </div>
             <footer>Footer</footer>
         </div>
