Update widget panel

--- a/index.html
+++ b/index.html
@@ -22,38 +22,25 @@
                 </nav>
             </div>
             <div id="dash-main">
-                <div class="widget">
-                    <h2>Example Widget</h2>
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eveniet provident repellat sunt cupiditate sit reprehenderit quam dolores ipsam omnis incidunt, mollitia esse, rerum atque adipisci expedita, illum laudantium officia distinctio.</p>
+                <div id="widget-panel">
+                    <div class="widget">
+                        <h2>Earnings</h2>
+                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eveniet provident repellat sunt cupiditate sit reprehenderit quam dolores ipsam omnis incidunt, mollitia esse, rerum atque adipisci expedita, illum laudantium officia distinctio.</p>
+                    </div>
+                    <div class="widget">
+                        <h2>Earnings</h2>
+                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eveniet provident repellat sunt cupiditate sit reprehenderit quam dolores ipsam omnis incidunt, mollitia esse, rerum atque adipisci expedita, illum laudantium officia distinctio.</p>
+                    </div>
+                    <div class="widget">
+                        <h2>Earnings</h2>
+                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eveniet provident repellat sunt cupiditate sit reprehenderit quam dolores ipsam omnis incidunt, mollitia esse, rerum atque adipisci expedita, illum laudantium officia distinctio.</p>
+                    </div>
+                    <div class="widget">
+                        <h2>Earnings</h2>
+                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eveniet provident repellat sunt cupiditate sit reprehenderit quam dolores ipsam omnis incidunt, mollitia esse, rerum atque adipisci expedita, illum laudantium officia distinctio.</p>
+                    </div>
                 </div>
-                <div class="widget">
-                    <h2>Example Widget</h2>
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eveniet provident repellat sunt cupiditate sit reprehenderit quam dolores ipsam omnis incidunt, mollitia esse, rerum atque adipisci expedita, illum laudantium officia distinctio.</p>
-                </div>
-                <div class="widget">
-                    <h2>Example Widget</h2>
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eveniet provident repellat sunt cupiditate sit reprehenderit quam dolores ipsam omnis incidunt, mollitia esse, rerum atque adipisci expedita, illum laudantium officia distinctio.</p>
-                </div>
-                <div class="widget">
-                    <h2>Example Widget</h2>
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eveniet provident repellat sunt cupiditate sit reprehenderit quam dolores ipsam omnis incidunt, mollitia esse, rerum atque adipisci expedita, illum laudantium officia distinctio.</p>
-                </div>
-                <div class="widget">
-                    <h2>Example Widget</h2>
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eveniet provident repellat sunt cupiditate sit reprehenderit quam dolores ipsam omnis incidunt, mollitia esse, rerum atque adipisci expedita, illum laudantium officia distinctio.</p>
-                </div>
-                <div class="widget">
-                    <h2>Example Widget</h2>
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eveniet provident repellat sunt cupiditate sit reprehenderit quam dolores ipsam omnis incidunt, mollitia esse, rerum atque adipisci expedita, illum laudantium officia distinctio.</p>
-                </div>
-                <div class="widget">
-                    <h2>Example Widget</h2>
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eveniet provident repellat sunt cupiditate sit reprehenderit quam dolores ipsam omnis incidunt, mollitia esse, rerum atque adipisci expedita, illum laudantium officia distinctio.</p>
-                </div>
-                <div class="widget">
-                    <h2>Example Widget</h2>
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eveniet provident repellat sunt cupiditate sit reprehenderit quam dolores ipsam omnis incidunt, mollitia esse, rerum atque adipisci expedita, illum laudantium officia distinctio.</p>
-                </div>
+                <div id="test">Test</div>
             </div>
             <footer>Footer</footer>
         </div>
