Update file content

--- a/index.html
+++ b/index.html
@@ -23,24 +23,36 @@
             </div>
             <div id="dash-main">
                 <div id="widget-panel">
-                    <div class="widget">
+                    <div class="widget earnings">
                         <h2>Earnings</h2>
                         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eveniet provident repellat sunt cupiditate sit reprehenderit quam dolores ipsam omnis incidunt, mollitia esse, rerum atque adipisci expedita, illum laudantium officia distinctio.</p>
+                        <div class="widget-buttons"><button class="widget-button">#</button><button class="widget-button">#</button><button class="widget-button">#</button></div>
                     </div>
-                    <div class="widget">
-                        <h2>Earnings</h2>
+                    <div class="widget stats">
+                        <h2>Statistics</h2>
                         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eveniet provident repellat sunt cupiditate sit reprehenderit quam dolores ipsam omnis incidunt, mollitia esse, rerum atque adipisci expedita, illum laudantium officia distinctio.</p>
+                        <div class="widget-buttons"><button class="widget-button">#</button><button class="widget-button">#</button><button class="widget-button">#</button></div>
                     </div>
-                    <div class="widget">
-                        <h2>Earnings</h2>
+                    <div class="widget kpi">
+                        <h2>Sales KPI</h2>
                         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eveniet provident repellat sunt cupiditate sit reprehenderit quam dolores ipsam omnis incidunt, mollitia esse, rerum atque adipisci expedita, illum laudantium officia distinctio.</p>
+                        <div class="widget-buttons"><button class="widget-button">#</button><button class="widget-button">#</button><button class="widget-button">#</button></div>
                     </div>
-                    <div class="widget">
-                        <h2>Earnings</h2>
+                    <div class="widget allies">
+                        <h2>Allies</h2>
                         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eveniet provident repellat sunt cupiditate sit reprehenderit quam dolores ipsam omnis incidunt, mollitia esse, rerum atque adipisci expedita, illum laudantium officia distinctio.</p>
+                        <div class="widget-buttons"><button class="widget-button">#</button><button class="widget-button">#</button><button class="widget-button">#</button></div>
                     </div>
                 </div>
-                <div id="test">Test</div>
+                <div id="updates-panel">
+                    <h2>Updates:</h2>
+                        <div class="update-content-widget"><h3 class="update-header">This is an update</h3><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum eos magnam dolorum sed cupiditate perspiciatis.</p></div>
+                        <div class="update-content-widget"><h3 class="update-header">This is an update</h3><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum eos magnam dolorum sed cupiditate perspiciatis.</p></div>
+                        <div class="update-content-widget"><h3 class="update-header">This is an update</h3><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum eos magnam dolorum sed cupiditate perspiciatis.</p></div>
+                        <div class="update-content-widget"><h3 class="update-header">This is an update</h3><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum eos magnam dolorum sed cupiditate perspiciatis.</p></div>
+                        <div class="update-content-widget"><h3 class="update-header">This is an update</h3><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum eos magnam dolorum sed cupiditate perspiciatis.</p></div>
+                        <div class="update-content-widget"><h3 class="update-header">This is an update</h3><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum eos magnam dolorum sed cupiditate perspiciatis.</p></div>
+                </div>
             </div>
             <footer>Footer</footer>
         </div>
