Fix horizontal overflow and update footer

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                         <div class="update-content-widget"><h3 class="update-header">This is an update</h3><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum eos magnam dolorum sed cupiditate perspiciatis.</p></div>
                 </div>
             </div>
-            <footer>Footer</footer>
+            <footer>Evil Space Corp &copy; 2024</footer>
         </div>
     </div>
 </body>
